--- a/public/Template-Dashboard/css/style.css
+++ b/public/Template-Dashboard/css/style.css
@@ -44,6 +44,11 @@ body {
     background-color: var(--bs-green);
 }
 
+.btn-master {
+    background-color: var(--bs-green);
+    border-color: var(--bs-green);
+}
+
 .dropdown-toggle::after {
     display: none;
 }
