--- a/public/Template-Dashboard/css/style.css
+++ b/public/Template-Dashboard/css/style.css
@@ -144,6 +144,7 @@ body {
     color: #ffffff;
     line-height: 1rem;
     text-align: center;
+    text-decoration: none;
     text-transform: uppercase;
     vertical-align: middle;
     align-items: center;
@@ -193,7 +194,34 @@ body {
     transform: translateY(-1px);
 }
 
+.tombolBatal {
+    border: none;
+    display: flex;
+    padding: 0.50rem 0.50rem;
+    background-color: #7c7f83;
+    color: #ffffff;
+    line-height: 1rem;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    vertical-align: middle;
+    align-items: center;
+    border-radius: 0.3rem;
+    user-select: none;
+    box-shadow: 0 4px 6px -1px #488aec31, 0 2px 4px -1px #488aec17;
+    transition: all .6s ease;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    -ms-border-radius: 0.3rem;
+    -o-border-radius: 0.3rem;
+}
 
+.tombolBatal:hover {
+    background-color: #6d7177;
+    color: #ffffff;
+    box-shadow: 0 4px 6px -1px #488aec31, 0 2px 4px -1px #488aec17;
+    transform: translateY(-1px);
+}
 
 /* End Tombol */
 
