--- a/public/Template-Dashboard/css/style.css
+++ b/public/Template-Dashboard/css/style.css
@@ -10,7 +10,7 @@
     --bs-red: #dc3545;
     --bs-orange: #fd7e14;
     --bs-yellow: #ffc107;
-    --bs-green: rgb(150, 186, 84);
+    --bs-green: #96ba54;
     --bs-teal: #20c997;
     --bs-cyan: #0dcaf0;
     --bs-white: #fff;
@@ -596,9 +596,9 @@ nav {
 
 .info-card .info-card-satuan {
     display: flex;
+    position: relative;
     justify-content: right;
     /* border: 1px solid; */
-
 }
 
 .info-card-satuan p {
